# rust-taglib

./: Cargo.toml  bindings.rs
.github/workflows/: rust.yml
taglib-sys/: Cargo.toml  build.rs
taglib-sys/src/: wrapper.hpp
