[package]
name = "taglib-next"
description = "Rust bindings for TagLib"
version = "0.0.0"
authors = ["Emmanuele Bassi <ebassi@gnome.org>", "Chris Down <chris@chrisdown.name>", "sagudev"]
license = "MIT"
repository = "https://github.com/sagudev/rust-taglib/"
keywords = ["taglib", "media", "tags", "metadata"]
homepage = "http://ebassi.github.io/taglib-rust/"
documentation = "http://ebassi.github.io/taglib-rust/docs/taglib/"
edition = "2021"

[lib]
name = "taglib_next"
path = "src/lib.rs"

[dependencies]
libc = "0.2"

[dependencies.taglib-sys-next]
path = "taglib-sys"
version = "*"

[features]
default = []